--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 __pycache__/
 src/__pycache__/
 src/settings_reader/__pycache__
+src/ai_model/__pycache__
+src/name_generator/__pycache__
 
 settings/network.yaml
